<resources>
    <string name="app_name">Calculator App</string>
    <string name="what_operation_do_you_wish_to_perform">What Operation Do You Wish To Perform?</string>
    <string name="enter_1st_number">Enter 1st Number</string>
    <string name="enter_2nd_number">Enter 2nd Number</string>
    <string name="add">ADD</string>
    <string name="subtract">SUBTRACT</string>
    <string name="multiply">MULTIPLY</string>
    <string name="divide">DIVIDE</string>
    <string name="percentage">PERCENTAGE</string>
    <string name="result_is_displayed_here">Result Is Displayed Here</string>
</resources>