<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/Query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/what_operation_do_you_wish_to_perform"
        android:textColor="#9575CD"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/FirstNumberDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/Query"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/enter_1st_number"
        android:textColor="#651FFF"
        android:textSize="20sp" />

        <EditText
            android:id="@+id/FirstNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/FirstNumberDescription"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="40dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/SecondNumberDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/FirstNumber"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/enter_2nd_number"
        android:textColor="#651FFF"
        android:textSize="20sp" />

        <EditText
            android:id="@+id/SecondNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/SecondNumberDescription"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="40dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/Result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/SecondNumber"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/result_is_displayed_here"
        android:textColor="#651FFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Result"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Subtract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Add"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"
        android:text="@string/subtract"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Multiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Subtract"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/multiply"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/black"/>

    <Button
        android:id="@+id/Divide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Multiply"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/divide"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/black"/>

    <Button
        android:id="@+id/Percentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Divide"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/percentage"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/black"/>

    </RelativeLayout>
</ScrollView>